--- a/maven-example/pom.xml
+++ b/maven-example/pom.xml
@@ -14,9 +14,19 @@
 			<version>0.1.6</version>
 		</dependency>
 		<dependency>
+			<groupId>com.ticketmaster.api</groupId>
+			<artifactId>discovery-model-java</artifactId>
+			<version>0.1.6</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>19.0</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
